<resources>
    <string name="app_name">MoonX Media Platform</string>

    <string name="receive_PublicMessageBroadCast">com.ewu.moonx.receivePublicMessageBroadCast</string>
    <string name="send_PublicMessageBroadCast">com.ewu.moonx.send_publicMesg</string>
    <string name="done_SendPublicMessagesDoneBroadCast">com.ewu.moonx.done_SendPublicMessagesDoneBroadCast</string>

    <string name="receive_UserMessageBroadCast">com.ewu.moonx.receive_UserMessageBroadCast</string>
    <string name="send_UserMessageBroadCast">com.ewu.moonx.send_UserMessageBroadCast</string>
    <string name="done_SendUserMessagesBroadCast">com.ewu.moonx.done_SendUserMessagesBroadCast</string>

    <string name="send_FileBroadcast">com.ewu.moonx.send_FileBroadCast</string>
    <string name="inProgress_FileBroadcast">com.ewu.moonx.inProgress_FileBroadCast</string>
    <string name="done_SendFileBroadcast">com.ewu.moonx.done_SendFileBroadCast</string>
    <string name="stop_SendFileBroadcast">com.ewu.moonx.stop_SendFileBroadCast</string>


    <string name="replayMessagesBroadcast">com.ewu.moonx.replay_messagesBroadcast</string>
    <string name="innerReplayBroadcast">com.ewu.moonx.innerReplayBroadcast</string>

    <string name="no_internet_connection">No Internet Connection</string>
    <string name="weak_internet_connection">Weak Internet Connection</string>
    <string name="unknown_error">There is Unkown Erorr</string>
    <string name="try_again">Try Again</string>
    <string name="incorrect_verfication_code">incorrect_verfication_code</string>
    <string name="empty_filed_error">Pleast Enter the empty fields</string>
    <string name="invlaid_Auth">Firebase AuthInvalid Credentials Exception</string>
    <string name="manyRequestExption">Firebase TooMany Requests Exception</string>
    <string name="yemen">Yemen</string>
    <string name="egypt">Egypt</string>
    <string name="uncorrect_phone">wrong phone number</string>
    <string name="check">Check</string>
    <string name="recive_msg">You will recive an messageYou will recive an messageYou will recive an message</string>
    <string name="wrong_verification_code">Wrong Verification Code</string>
    <string name="wait_verfiy_message">You will just wait for MoonX Media company approval on your application within application users. </string>
    <string name="if_you_now">If you sure your odred done click CHECK NOW</string>
    <string name="every_thing_is_done">Every thing is Done</string>
    <string name="request">Request</string>
    <string name="save">Save</string>
    <string name="add_new_request">Add new request</string>
    <string name="moonx_platform">Moonx platform app</string>
    <string name="jounralist_app">Journalist app</string>

    <string-array name="daysPicker">
        <item>اليوم</item>
        <item>غداً</item>
        <item>يومين</item>
        <item>أيام</item>
        <item>يوم</item>
    </string-array>

    <string-array name="AMP">
        <item>AM</item>
        <item>PM</item>
    </string-array>

    <string name="heading">MVVM Architecture Pattern</string>
    <string name="email_hint">Enter your Email ID</string>
    <string name="password_hint">Enter your password</string>
    <string name="button_text">Login</string>
    <string name="You">You</string>
    <string name="selectMsgBroadcast">selectMsgBroadcast</string>
    <string name="Message_copied">Message copied</string>
    <string name="deleteMsgs_alert">Are you sure to delete messages, if the messages sended can not remove from receiver</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="deleteMsgs_title">Delete Chat Messages</string>
    <string name="promission_requseted">\"Promission Requested \"</string>
    <string name="image">Image</string>
    <string name="file">File</string>
    <string name="links">Links</string>
    <string name="location">Location</string>
    <string name="content">Content</string>
    <string name="audio">Audio</string>
    <string name="slid_to_cancle"><![CDATA[<<]]> Slid to cancle</string>

</resources>